SERVER-6498 fix mongoimport error when last line is empty